# tic_tac_toe_rusty

./: Cargo.toml  LICENSE  README.md
src/: gui.rs  lib.rs  main.rs
