[package]
name = "rustic_tac_toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
fltk = "^1.2"

[lib]
name = "tic_tac_toe"
path = "src/lib.rs"

[[bin]]
name = "rustic_tac_toe"
path = "src/main.rs"
